Fix modal overflow and delete unnecessary modalCSS file

--- a/my-next-project/src/styles/globals.css
+++ b/my-next-project/src/styles/globals.css
@@ -31,6 +31,7 @@ html {
 .overlay {
   /* background-color: rgba(0, 0, 0, 0.5); */
   position: fixed;
+  z-index: 10;
   width: 100%;
   height: 100%;
 }
@@ -38,6 +39,8 @@ html {
 .modalContainer {
   max-width: 600px;
   width: 100%;
+  max-height: 65vh;
+  overflow-y: scroll;
   position: fixed;
   top: 40%;
   left: 50%;
@@ -100,5 +103,5 @@ html {
   width: 100%;
   height: 100%;
   align-items: center;
-  border-radius: 1rem
+  border-radius: 1rem;
 }
